doc/logfile.txt
Project documentation
<---- javadoc command: ---->
/snap/bluej/291/usr/lib/jvm/java-17-openjdk-amd64/bin/javadoc
-sourcepath
/home/student/Desktop/stockPriceHistory
-source
17
-classpath
/snap/bluej/291/usr/share/bluej/bluejcore.jar:/snap/bluej/291/usr/share/bluej/junit-jupiter-5.5.2.jar:/snap/bluej/291/usr/share/bluej/junit-jupiter-api-5.5.2.jar:/snap/bluej/291/usr/share/bluej/junit-jupiter-engine-5.5.2.jar:/snap/bluej/291/usr/share/bluej/junit-jupiter-migrationsupport-5.5.2.jar:/snap/bluej/291/usr/share/bluej/junit-jupiter-params-5.5.2.jar:/snap/bluej/291/usr/share/bluej/junit-platform-commons-1.5.2.jar:/snap/bluej/291/usr/share/bluej/junit-platform-console-1.5.2.jar:/snap/bluej/291/usr/share/bluej/junit-platform-console-standalone-1.5.2.jar:/snap/bluej/291/usr/share/bluej/junit-platform-engine-1.5.2.jar:/snap/bluej/291/usr/share/bluej/junit-platform-launcher-1.5.2.jar:/snap/bluej/291/usr/share/bluej/junit-platform-reporting-1.5.2.jar:/snap/bluej/291/usr/share/bluej/junit-platform-runner-1.5.2.jar:/snap/bluej/291/usr/share/bluej/junit-platform-suite-api-1.5.2.jar:/snap/bluej/291/usr/share/bluej/junit-platform-testkit-1.5.2.jar:/snap/bluej/291/usr/share/bluej/junit-quickcheck-core-0.9.jar:/snap/bluej/291/usr/share/bluej/junit-vintage-engine-5.5.2.jar:/snap/bluej/291/usr/share/bluej/hamcrest-core-1.3.jar:/snap/bluej/291/usr/share/bluej/hamcrest-library-1.3.jar:/snap/bluej/291/usr/share/bluej/lang-stride.jar:/snap/bluej/291/usr/share/java/javafx-sdk-16/lib/javafx.base.jar:/snap/bluej/291/usr/share/java/javafx-sdk-16/lib/javafx.controls.jar:/snap/bluej/291/usr/share/java/javafx-sdk-16/lib/javafx.fxml.jar:/snap/bluej/291/usr/share/java/javafx-sdk-16/lib/javafx.graphics.jar:/snap/bluej/291/usr/share/java/javafx-sdk-16/lib/javafx.media.jar:/snap/bluej/291/usr/share/java/javafx-sdk-16/lib/javafx.properties.jar:/snap/bluej/291/usr/share/java/javafx-sdk-16/lib/javafx.swing.jar:/snap/bluej/291/usr/share/java/javafx-sdk-16/lib/javafx.web.jar:/home/student/Desktop/stockPriceHistory/libraries/jackson-annotations-2.9.0.jar:/home/student/Desktop/stockPriceHistory/libraries/jackson-core-2.9.8.jar:/home/student/Desktop/stockPriceHistory/libraries/jackson-databind-2.9.8.jar:/home/student/Desktop/stockPriceHistory/libraries/log4j-1.2.16.jar:/home/student/Desktop/stockPriceHistory/libraries/slf4j-api-1.7.31.jar:/home/student/Desktop/stockPriceHistory/libraries/slf4j-nop-1.7.31.jar:/snap/bluej/291/usr/share/bluej/userlib/bluej-junit-ext.jar:/snap/bluej/291/usr/share/bluej/userlib/pi4j-core.jar:/snap/bluej/291/usr/share/bluej/userlib/pi4j-device.jar:/snap/bluej/291/usr/share/bluej/userlib/pi4j-gpio-extension.jar:/snap/bluej/291/usr/share/bluej/userlib/pi4j-service.jar:/home/student/Desktop/stockPriceHistory
-d
/home/student/Desktop/stockPriceHistory/doc
-encoding
UTF-8
-charset
UTF-8
-doctitle
stockPriceHistory
-windowtitle
stockPriceHistory
-author
-version
-nodeprecated
-package
-Xdoclint:none
-link
https://docs.oracle.com/en/java/javase/11/docs/api/
yahoofinance
/home/student/Desktop/stockPriceHistory/StockPriceHistory.java
<---- end of javadoc command ---->
Loading source file /home/student/Desktop/stockPriceHistory/StockPriceHistory.java...
Loading source files for package yahoofinance...
Constructing Javadoc information...
/home/student/Desktop/stockPriceHistory/StockPriceHistory.java:3: error: cannot find symbol
import yahoofinance.interval;
                   ^
  symbol:   class interval
  location: package yahoofinance
1 error
